[package]
name = "payments-engine"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
dashmap = "4.0.2"
futures = "0.3.17"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.2"